--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2b87b7fd",
+   "id": "ac6ab070",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3d8ba923",
+   "id": "4064d69d",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f7f27ebd",
+   "id": "146ab61d",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "296038b1",
+   "id": "f43ffff5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b67c822e",
+   "id": "a89350bc",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d0f392bb",
+   "id": "bef6cf05",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dce196a",
+   "id": "db49779c",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fafee43b",
+   "id": "45b0e427",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9948cb3f",
+   "id": "e765acf7",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3694c6f3",
+   "id": "e75eb622",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "693afd5b",
+   "id": "0351e870",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "92dc8377",
+   "id": "f4a0160b",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f41cec04",
+   "id": "ab30f65d",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "576c2738",
+   "id": "07b37842",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c6f5b63d",
+   "id": "e958ecd5",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adb4059b",
+   "id": "4dd9d2a5",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2cdf256c",
+   "id": "533fb908",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "db3cfd67",
+   "id": "25496b59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4d4d3344",
+   "id": "2a228ce4",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "107117b0",
+   "id": "b349d176",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2f1d9634",
+   "id": "700c668b",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3d295e59",
+   "id": "e4a0cd9f",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "734e0182",
+   "id": "21f35367",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2f0e31b1",
+   "id": "d77ef4d0",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4d6b8380",
+   "id": "48b1da4e",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "eb2376ba",
+   "id": "93a881b3",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7c9dc0bb",
+   "id": "fe3455e2",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c4dc238",
+   "id": "7d5c999f",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -666,7 +666,7 @@
     "1. Ask the user to enter their name.\n",
     "2. Print a \"name triangle\" based on that name:\n",
     "    - On the first line, print the 1st letter only\n",
-    "    - On the second line, print the 2nd letter only\n",
+    "    - On the second line, print the first 2 characters\n",
     "    - ...\n",
     "    - On the final line, print the full name\n",
     "    \n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f095c788",
+   "id": "b313ef4f",
    "metadata": {},
    "outputs": [
     {
@@ -713,18 +713,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1e06c959",
+   "execution_count": 39,
+   "id": "01ae1525",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "R\n",
+      "Re\n",
+      "Reu\n",
+      "Reuv\n",
+      "Reuve\n"
+     ]
+    }
+   ],
    "source": [
     "# name = 'Reuven'\n",
     "# len(name) == 6\n",
-    "# range()\n",
+    "# range(len(name)) == from 0 up to (and not including) 6\n",
+    "\n",
+    "# an off-by-one error!\n",
+    "for counter in range(len(name)):\n",
+    "    print(name[:counter])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "db411081",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Encyclopedia\n",
+      "E\n",
+      "En\n",
+      "Enc\n",
+      "Ency\n",
+      "Encyc\n",
+      "Encycl\n",
+      "Encyclo\n",
+      "Encyclop\n",
+      "Encyclope\n",
+      "Encycloped\n",
+      "Encyclopedi\n",
+      "Encyclopedia\n"
+     ]
+    }
+   ],
+   "source": [
+    "# name = 'Reuven'\n",
+    "# len(name) == 6\n",
+    "# range(len(name)) == from 0 up to (and not including) 6\n",
+    "\n",
+    "name = input('Enter your name: ').strip()\n",
     "\n",
     "for counter in range(len(name)):\n",
-    "    "
+    "    print(name[:counter+1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "949c843d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
